<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/settings_back"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp">

            <ImageView
                android:layout_width="@dimen/button_next_icon_size"
                android:layout_height="@dimen/button_next_icon_size"
                android:src="@drawable/ic_back_green"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="14dp"
                android:textColor="@color/blue_green"
                android:text="@string/back"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="@color/blue_dark"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/settings"/>

        <ImageView
            android:id="@+id/settings_logout"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/icon_logout"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey_light"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_image"
            android:layout_width="@dimen/account_image_size"
            android:layout_height="@dimen/account_image_size"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_no_photo"
            app:civ_border_width="4dp"
            app:civ_border_color="@color/blue_green"/>

        <TextView
            android:id="@+id/settings_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/settings_image"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginTop="12dp"
            android:text="Name Surname"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/settings_edit_profile"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/settings_edit_profile"/>

        <ImageView style="@style/SettingsItemArrow" />

        <View style="@style/SettingsItemDivider"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_share_friends"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/settings_share_with_friends"/>

        <ImageView style="@style/SettingsItemArrow" />

        <View style="@style/SettingsItemDivider"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_service_fee"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/settings_update_service_fee"/>

        <ImageView style="@style/SettingsItemArrow" />

        <View style="@style/SettingsItemDivider"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_turn_key_service"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/settings_turn_key_service_on"/>

        <CheckBox
            android:id="@+id/settings_key_service_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="8dp"/>

        <View style="@style/SettingsItemDivider"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_become_key"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/settings_become_key"/>

        <ImageView style="@style/SettingsItemArrow" />

        <View style="@style/SettingsItemDivider"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_change_currency"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/settings_change_currency"/>

        <View style="@style/SettingsItemDivider"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_gps"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/settings_gps"/>

        <CheckBox
            android:id="@+id/settings_gps_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="8dp"/>

        <View style="@style/SettingsItemDivider"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_link_bank"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/settings_link_bank"/>

        <ImageView style="@style/SettingsItemArrow" />

        <View style="@style/SettingsItemDivider"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_tac"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/settings_tac"/>

        <ImageView style="@style/SettingsItemArrow" />

        <View style="@style/SettingsItemDivider"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_privacy_policy"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/settings_privacy_policy"/>

        <ImageView style="@style/SettingsItemArrow" />

        <View style="@style/SettingsItemDivider"/>

    </FrameLayout>

</LinearLayout>