<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light">

    <View style="@style/PageShadow"/>

    <ImageView
        style="@style/LoginHeaderArrowBack"/>

    <TextView
        android:id="@+id/personal_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="22dp"
        android:textColor="@color/blue_dark"
        android:text="@string/login_personal_details_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_below="@id/personal_details_title"
        android:layout_above="@id/button_next">

        <LinearLayout
            android:id="@+id/login_personal_details_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/login_personal_details_photo"
                android:layout_width="@dimen/login_personal_details_image"
                android:layout_height="@dimen/login_personal_details_image"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="18dp"
                android:src="@drawable/ic_no_photo"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/blue_green"/>

            <EditText
                android:id="@+id/login_personal_details_input_name"
                style="@style/LoginPersonalDetailsInput"
                android:hint="@string/login_personal_details_name_hint"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/login_personal_details_input_surname"
                style="@style/LoginPersonalDetailsInput"
                android:hint="@string/login_personal_details_surname_hint"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/login_personal_details_input_birthday"
                style="@style/LoginPersonalDetailsInput"
                android:hint="@string/login_personal_details_birthday_hint"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:layout_marginBottom="10dp"/>

            <RadioGroup
                android:id="@+id/login_personal_details_gender"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginBottom="10dp">

                <RadioButton
                    android:id="@+id/login_personal_details_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/male"
                    android:textColor="@color/profile_gender_color"
                    android:buttonTint="@color/profile_gender_color"
                    android:layout_marginRight="12dp"/>

                <RadioButton
                    android:id="@+id/login_personal_details_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/profile_gender_color"
                    android:buttonTint="@color/profile_gender_color"
                    android:text="@string/female"/>

            </RadioGroup>

            <EditText
                android:id="@+id/login_personal_details_input_email"
                style="@style/LoginPersonalDetailsInput"
                android:inputType="textEmailAddress"
                android:hint="@string/login_personal_details_email_hint"
                android:maxLines="1"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/input_address_country"
                style="@style/LoginPersonalDetailsInput"
                android:hint="@string/input_address_country"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/input_address_line"
                style="@style/LoginPersonalDetailsInput"
                android:hint="@string/input_address_line"
                android:maxLines="2"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/input_address_city"
                style="@style/LoginPersonalDetailsInput"
                android:hint="@string/input_address_city"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/layout_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"/>

</RelativeLayout>