<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/input_address_country"
        style="@style/LoginPersonalDetailsInput"
        android:hint="@string/input_address_country"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/input_address_line"
        style="@style/LoginPersonalDetailsInput"
        android:hint="@string/input_address_line"
        android:maxLines="2"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/input_address_city"
        style="@style/LoginPersonalDetailsInput"
        android:hint="@string/input_address_city"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_marginBottom="10dp"/>

</LinearLayout>