<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light">

    <View style="@style/PageShadow"/>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/header_back"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp">

            <ImageView
                android:layout_width="@dimen/button_next_icon_size"
                android:layout_height="@dimen/button_next_icon_size"
                android:src="@drawable/ic_back_green"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="14dp"
                android:textColor="@color/blue_green"
                android:text="@string/back"/>

        </LinearLayout>

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="@color/blue_dark"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/transaction_reference"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textColor="@color/blue_green"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="12dp"
        android:text="@string/transaction_complete_transaction_completed"/>

    <TextView
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/transaction_complete_amount_added"
        android:textSize="22dp"
        android:paddingLeft="@dimen/key_request_title_padding"
        android:paddingRight="@dimen/key_request_title_padding"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black_light"
        android:text="@string/transaction_complete_successfully_transaction"/>

    <TextView
        android:id="@+id/transaction_complete_amount_added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/key_request_title_padding"
        android:layout_above="@id/transaction_complete_total_balance"
        android:textSize="22dp"
        android:text="@string/transaction_complete_amount_added"
        android:textColor="@color/black_light"/>

    <TextView
        android:id="@+id/transaction_complete_total_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/key_request_title_padding"
        android:layout_centerVertical="true"
        android:textSize="22dp"
        android:text="@string/transaction_complete_total_balance"
        android:textColor="@color/black_light"/>

    <TextView
        android:id="@+id/transaction_complete_transaction_code"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/button_next"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_dark"
        android:layout_marginBottom="36dp"
        android:textSize="22dp"
        android:textStyle="bold"
        android:text="A2c4964"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/transaction_complete_transaction_code"
        android:layout_height="wrap_content"
        android:textColor="@color/black_light"
        android:textSize="22dp"
        android:text="@string/transaction_complete_transaction_reference"/>


    <include layout="@layout/layout_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>