<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light">

    <ImageView style="@style/HeaderArrowBack" />

    <View style="@style/PageShadow"/>

    <TextView style="@style/HeaderTitle"
        android:id="@+id/email_input_title"
        android:layout_marginTop="40dp"
        android:text="@string/input_email_title"/>

    <TextView style="@style/HeaderTitle"
        android:id="@+id/email_input_subtitle"
        android:textColor="@color/grey"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_below="@id/email_input_title"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/input_email_subtitle"/>

    <EditText
        android:id="@+id/input_email"
        style="@style/LoginPersonalDetailsInput"
        android:hint="@string/login_personal_details_email_hint"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_below="@id/email_input_subtitle"
        android:layout_marginTop="40dp"
        android:imeOptions="actionDone" />


    <include layout="@layout/layout_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"/>


</RelativeLayout>